--- a/google_client.glade
+++ b/google_client.glade
@@ -5,6 +5,7 @@
   <object class="GtkApplicationWindow" id="global_window">
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">Google Drive Client Application</property>
+    <signal name="destroy" handler="on_global_window_destroy" swapped="no"/>
     <child type="titlebar">
       <placeholder/>
     </child>
@@ -12,7 +13,6 @@
       <object class="GtkGrid" id="window_main">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <signal name="destroy" handler="on_window_main_destroy" swapped="no"/>
         <child>
           <object class="GtkBox">
             <property name="visible">True</property>
@@ -26,10 +26,16 @@
                 <property name="can_focus">True</property>
                 <property name="hexpand">True</property>
                 <property name="vexpand">True</property>
+                <property name="xpad">6</property>
+                <property name="ypad">0</property>
                 <property name="label" translatable="yes">This is file one in Google drive hnbjknkbj</property>
                 <property name="selectable">True</property>
                 <property name="ellipsize">start</property>
                 <property name="single_line_mode">True</property>
+                <property name="xalign">0.55000001192092896</property>
+                <property name="yalign">0.55000001192092896</property>
+                <signal name="activate-link" handler="on_file1_activate_link" object="sync" swapped="no"/>
+                <signal name="focus" handler="on_file1_focus" swapped="no"/>
               </object>
               <packing>
                 <property name="expand">True</property>
@@ -126,8 +132,8 @@
               </packing>
             </child>
             <child>
-              <object class="GtkButton" id="sync">
-                <property name="label" translatable="yes">Synchronise</property>
+              <object class="GtkButton" id="list">
+                <property name="label" translatable="yes">Load Files</property>
                 <property name="name">sync</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
@@ -151,14 +157,10 @@
           </packing>
         </child>
         <child>
-          <object class="GtkLabel">
-            <property name="name">top_label</property>
+          <object class="GtkLabel" id="empty_label">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="margin_bottom">2</property>
-            <property name="hexpand">True</property>
-            <property name="vexpand">False</property>
-            <property name="label" translatable="yes">Drive Client Application</property>
+            <property name="label" translatable="yes">label</property>
           </object>
           <packing>
             <property name="left_attach">0</property>
