--- a/google_client.glade
+++ b/google_client.glade
@@ -32,7 +32,7 @@
                     <property name="can_focus">False</property>
                     <property name="hexpand">True</property>
                     <child>
-                      <object class="GtkTreeView">
+                      <object class="GtkTreeView" id="tree_main">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <child internal-child="selection">
